objects/RMA_DNCN__c.object
<CustomObject>
    <description>This object is maintained for storing the Credit/Debit Note for Duplicate check when creating RMA request. These DN/CN will not be associated to any RMA record, instead would have issued for a particular Invoice no.</description>
    <fields>
        <fullName>CN_DN_Number__c</fullName>
        <label>CN/DN Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Lot_Combination__c</fullName>
        <formula>Invoice_Number__c + &apos;:&apos; +  Lot_Id__c</formula>
        <label>Invoice:Lot Combination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Id__c</fullName>
        <label>Lot Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Source__c</fullName>
        <label>Record Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IF(BEGINS(Name, &apos;RMA&apos;),&apos;RMA&apos;,&apos;DNCN&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wafer_Id__c</fullName>
        <label>Wafer Id</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RMA DN/CN</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_DN_Number__c</columns>
        <columns>ExternalId__c</columns>
        <columns>Lot_Id__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Wafer_Id__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Source__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Request Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMA DN/CN</pluralLabel>
    <recordTypes>
        <fullName>DNCN</fullName>
        <active>true</active>
        <label>DNCN</label>
    </recordTypes>
    <recordTypes>
        <fullName>RMA</fullName>
        <active>true</active>
        <label>RMA</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>